--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p>An easy and quick dish, perfect for any meal. This classc omelette combines beaten eggs
             cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats. </p>
           <div class="prep-time-container">
-            <h2 class="prep-time-heading">Preparation time</h2 >
+            <h2>Preparation time</h2 >
             <ul class="prep-time-list">
               <li><strong>Total:</strong> ApproxmateIy 10 minutes</li>
               <li><strong>Preparation:</strong> 5 minutes</li>
