--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main role="main">
       <div class="recipe-container">
         <div class="image-container">
-          <img src="assets/images/image-omelette.jpeg" class="menu-image" alt="omelette on a plate">
+          <img src="assets/images/image-omelette.jpeg" class="menu-image" alt="" aria-hidden="true">
         </div>
         <div class="recipe-content">
           <h1 class="recipe-heading">Simple Omelette Recipe</h1>
